# hfs

./: CNAME  LICENSE  MAINTENANCE.md  README.md  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  release.yml
assets/css/: main.css
scripts/: sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http.rs  lib.rs  network.rs
